[gd_scene load_steps=11 format=3 uid="uid://dycx4ynqcglq2"]

[ext_resource type="Script" path="res://main.gd" id="1_i5265"]
[ext_resource type="PackedScene" uid="uid://dhysbk4yk0uax" path="res://UI/button.tscn" id="2_iovf6"]
[ext_resource type="PackedScene" uid="uid://dd51kugvn0abf" path="res://static/mnms.tscn" id="3_wcure"]
[ext_resource type="PackedScene" uid="uid://dekk1mjqa7kgg" path="res://static/sex_plus.tscn" id="5_ijwid"]
[ext_resource type="PackedScene" uid="uid://dryeoirtyhc1j" path="res://project/project.tscn" id="6_b43n7"]
[ext_resource type="PackedScene" uid="uid://bk0takadqfg68" path="res://operator/operator.tscn" id="7_gjysb"]
[ext_resource type="PackedScene" uid="uid://ca1808hb6f38m" path="res://timeline/timeline.tscn" id="8_t677l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_31b27"]
bg_color = Color(0.937255, 0.937255, 0.937255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xcq4h"]
bg_color = Color(1, 1, 1, 1)
border_width_right = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eo2x6"]
bg_color = Color(0.937255, 0.937255, 0.937255, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i5265")

[node name="toolbar" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 11.0
offset_top = 8.0
offset_right = 668.0
offset_bottom = 48.0
theme_override_constants/separation = 8

[node name="license label" type="Label" parent="toolbar"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "License
"

[node name="license" type="LineEdit" parent="toolbar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.41598, 0.41598, 0.41598, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_31b27")
placeholder_text = "ID"
alignment = 1
context_menu_enabled = false
virtual_keyboard_enabled = false

[node name="VSeparator" type="VSeparator" parent="toolbar"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_xcq4h")

[node name="operator_button" parent="toolbar" instance=ExtResource("2_iovf6")]
layout_mode = 2
text = "Operator"

[node name="genotype_button" parent="toolbar" instance=ExtResource("2_iovf6")]
layout_mode = 2
text = "Genotype"

[node name="treatment_button" parent="toolbar" instance=ExtResource("2_iovf6")]
layout_mode = 2
text = "Treatment"

[node name="cage_button" parent="toolbar" instance=ExtResource("2_iovf6")]
layout_mode = 2
text = "Cage"

[node name="experiment_button" parent="toolbar" instance=ExtResource("2_iovf6")]
layout_mode = 2
text = "Experiment"

[node name="health_button" parent="toolbar" instance=ExtResource("2_iovf6")]
layout_mode = 2
text = " Health"

[node name="comment_button" parent="toolbar" instance=ExtResource("2_iovf6")]
layout_mode = 2
text = "   !   "

[node name="VSeparator2" type="VSeparator" parent="toolbar"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_xcq4h")

[node name="save_button" parent="toolbar" instance=ExtResource("2_iovf6")]
layout_mode = 2
text = "Save"

[node name="load_button" parent="toolbar" instance=ExtResource("2_iovf6")]
layout_mode = 2
text = "Load"

[node name="GraphEdit" type="GraphEdit" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 54.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/grid_minor = Color(0.996078, 0.996078, 0.996078, 1)
theme_override_colors/grid_major = Color(0.994961, 0.99566, 0.99671, 1)
theme_override_styles/panel = SubResource("StyleBoxFlat_eo2x6")
right_disconnects = true
connection_lines_thickness = 0.5
minimap_enabled = false
show_menu = false
show_grid_buttons = false
show_arrange_button = false

[node name="sex_plus" parent="GraphEdit" groups=["generic_group"] instance=ExtResource("5_ijwid")]
layout_mode = 0
offset_left = 172.0
offset_top = 450.0
offset_right = 301.0
offset_bottom = 543.0
mouse_filter = 1
position_offset = Vector2(172, 450)

[node name="timeline" parent="GraphEdit" groups=["generic_group"] instance=ExtResource("8_t677l")]
layout_mode = 1
offset_left = -360.0
offset_top = -142.0
offset_right = -8.0
offset_bottom = -5.0
mouse_filter = 1
position_offset = Vector2(792, 426)

[node name="project" parent="GraphEdit" groups=["generic_group"] instance=ExtResource("6_b43n7")]
layout_mode = 0
offset_left = 416.0
offset_top = 12.0
offset_right = 602.0
offset_bottom = 124.0
mouse_filter = 1
position_offset = Vector2(416, 12)

[node name="MNMS" parent="GraphEdit" instance=ExtResource("3_wcure")]
layout_mode = 0
offset_left = 11.0
offset_top = 12.0
offset_right = 305.0
offset_bottom = 307.0
mouse_filter = 1
position_offset = Vector2(11, 12)

[node name="operator" parent="GraphEdit" instance=ExtResource("7_gjysb")]
layout_mode = 0
offset_left = 88.0
offset_top = 322.0
offset_right = 303.0
offset_bottom = 432.0
mouse_filter = 1
position_offset = Vector2(88, 322)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -262.0
offset_top = -23.0
offset_right = -143.0
grow_horizontal = 0
grow_vertical = 0
text = "Subjects, Cages"

[node name="subject_count" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -94.0
offset_top = -23.0
offset_right = 3.0
grow_horizontal = 0
grow_vertical = 0

[node name="cage_count" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
initial_position = 2
size = Vector2i(203, 90)
unresizable = true
borderless = true
always_on_top = true
ok_button_text = "Delete"
dialog_text = "Delete selected node(s)?"

[node name="PopupMenu" type="PopupMenu" parent="."]

[connection signal="pressed" from="toolbar/operator_button" to="." method="_on_operator_button_pressed"]
[connection signal="pressed" from="toolbar/genotype_button" to="." method="_on_genotype_button_pressed"]
[connection signal="pressed" from="toolbar/treatment_button" to="." method="_on_treatment_button_pressed"]
[connection signal="pressed" from="toolbar/cage_button" to="." method="_on_cage_button_pressed"]
[connection signal="pressed" from="toolbar/experiment_button" to="." method="_on_experiment_button_pressed"]
[connection signal="pressed" from="toolbar/health_button" to="." method="_on_health_button_pressed"]
[connection signal="pressed" from="toolbar/comment_button" to="." method="_on_comment_button_pressed"]
[connection signal="pressed" from="toolbar/save_button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="toolbar/load_button" to="." method="_on_load_button_pressed"]
[connection signal="connection_request" from="GraphEdit" to="." method="_on_graph_edit_connection_request"]
[connection signal="copy_nodes_request" from="GraphEdit" to="." method="_on_graph_edit_copy_nodes_request"]
[connection signal="delete_nodes_request" from="GraphEdit" to="." method="_on_graph_edit_delete_nodes_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_graph_edit_disconnection_request"]
[connection signal="node_deselected" from="GraphEdit" to="." method="_on_graph_edit_node_deselected"]
[connection signal="node_selected" from="GraphEdit" to="." method="_on_graph_edit_node_selected"]
[connection signal="paste_nodes_request" from="GraphEdit" to="." method="_on_graph_edit_paste_nodes_request"]
[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
